Bringing in code from codepen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Staatliches&display=swap" rel="stylesheet">
 
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin&family=Oswald:wght@200;400&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <nav>
+      <a href="#pair1">League Spartan + Staatliches</a>
+      <a href="#pair2">Dancing Spirit + Lato</a>
+      <a href="#pair3">Yanone Kaffeesatz + Abril Fatface</a>
+    </nav>
+    <header class="hero hero-background" id="top">
+      <section class="hero-content">
+        <h1>Google Font Pairings</h1>
+        <h2>by Olivia Fava</h2>
+      </section>
+    </header>
+
+    <main>
+      <section class="first-section-background with-background" id="pair1">
+        <article class="first-article-container">
+          <div class="number">1</div>
+          <h3>
+            <span class="font-pair1a">League Spartan</span> +
+            <span class="font-pair1b">Staatliches</span>
+          </h3>
+          <p><b>A combination of all caps and sentence caps.</b></p>
+          <p>
+           League Spartan is The League Of Moveable Type's interpretation of Matt Bailey's Spartan, a typeface based on early 20th century American geometric sans serifs.
+</p>
+          <p>
+            Staatliches is a clean cut display face with charmingly unconventional proportions. The alphabet was designed in response to Herbert Bayer’s title lettering on the cover of the first Bauhaus exhibition catalogue, which was published in 1923. It features full sets of capitals, numbers, punctuation, and symbols, in addition to alternate widths, discretionary ligatures, and common Latin accents.
+
+          </p>
+          <a
+            href="https://fonts.google.com/specimen/Staatliches?query=staa"
+            target="_blank"
+            >Download Staatliches</a
+          >
+          <a
+            href="https://fonts.google.com/specimen/League+Spartan?query=lea"
+            target="_blank"
+            >Download League Spartan</a
+          >
+        </article>
+      </section>
+
+      <section class="second-section-background with-background" id="pair2">
+        <article class="second-article-container">
+          <div class="number">2</div>
+          <h3>
+            <span class="font-pair1a">Dancing Spirit</span> +
+            <span class="font-pair1b">Lato</span>
+          </h3>
+          <p><b>This pair utilizes both a sans-serif and a serif to compliment one another.</b></p>
+          <p>
+            Dancing Script is a lively casual script where the letters bounce and change size slightly. Caps are big, and goes below the baseline.
+
+Dancing Script references popular scripts typefaces from the 50's.
+
+It relates to Murray Hill (Emil Klumpp. 1956) in his weight distribution, and to Mistral (Roger Excoffon. 1953) in his lively bouncing effect.
+
+Use it when you want a friendly, informal and spontaneous look.
+
+
+          </p>
+          <p>
+            Lato is a sans serif typeface family started in the summer of 2010 by Warsaw-based designer Łukasz Dziedzic (“Lato” means “Summer” in Polish). In December 2010 the Lato family was published under the Open Font License by his foundry tyPoland, with support from Google.
+
+In the last ten or so years, during which Łukasz has been designing type, most of his projects were rooted in a particular design task that he needed to solve. With Lato, it was no different. Originally, the family was conceived as a set of corporate fonts for a large client — who in the end decided to go in different stylistic direction, so the family became available for a public release.
+
+When working on Lato, Łukasz tried to carefully balance some potentially conflicting priorities. He wanted to create a typeface that would seem quite “transparent” when used in body text but would display some original traits when used in larger sizes. He used classical proportions (particularly visible in the uppercase) to give the letterforms familiar harmony and elegance. At the same time, he created a sleek sans serif look, which makes evident the fact that Lato was designed in 2010 — even though it does not follow any current trend.
+
+
+          </p>
+          <a
+            href="https://fonts.google.com/specimen/Dancing+Script#about"
+            target="_blank"
+            >Download Dancing Spirit</a
+          >
+          <a
+            href="https://fonts.google.com/specimen/Lato#about"
+            target="_blank"
+            >Download Lato</a
+          >
+        </article>
+      </section>
+
+      <section class="third-section-background with-background" id="pair3">
+        <article class="third-article-container">
+          <div class="number">3</div>
+          <h3>
+            <span class="font-pair1a">Yanone Kaffeesatz</span> +
+            <span class="font-pair1b">Abril Fatface</span>
+          </h3>
+          <p><b>Where decorative playfully meets sans-serif.</b></p>
+          <p>
+           Yanone Kaffeesatz" was first published in 2004 and is Yanone’s first ever finished typeface. Its Bold is reminiscent of 1920s coffee house typography, while the rather thin fonts bridge the gap to present times. Lacking self confidence and knowledge about the type scene, Yanone decided to publish the family for free under a Creative Commons License. A decision that should turn out one of the best he ever made. It has been downloaded over 100,000 times to date, and you can witness Kaffeesatz use on German fresh-water gyms, Dubai mall promos and New Zealand McDonalds ads. And of course on coffee and foodstuff packaging and café design around the globe.
+          </p>
+          <p>
+            Abril Fatface is part of a bigger type family system, Abril, which includes 18 styles for all Display and Text uses. The titling weights are a contemporary revamp of classic Didone styles, display both neutrality and strong presence on the page to attract reader attention with measured tension by its curves, good color and high contrast.
+
+Abril Fatface in particular is inspired by the heavy titling fonts used in advertising posters in 19th century Britain and France. The thin serifs and clean curves lend the typeface a refined touch that give any headline an elegant appearance. The Extended Latin character set supports over 50 languages, including those from Central and Northern Europe.
+          </p>
+          <a
+            href="https://fonts.google.com/specimen/Yanone+Kaffeesatz#about"
+            target="_blank"
+            >Download Yanone Kaffeesatz</a
+          >
+          <a
+            href="https://fonts.google.com/specimen/Abril+Fatface#about"
+            target="_blank"
+            >Download Abril Fatface</a
+          >
+        </article>
+      </section>
+      <footer>
+        <a href="#top">Jump to Top</a>
+      </footer>
+    </main>
+<script src= "scripts/scripts.js"></script>
+  </body>
+</html>
