--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles/styles.css"/>
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Staatliches&display=swap" rel="stylesheet">
@@ -10,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Cabin&family=Oswald:wght@200;400&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
